--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/siternak_logo_pic"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/siternak_logo_pic"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity android:name=".activities.auth.LoginActivity" >
@@ -19,6 +19,11 @@
 
         <!-- auth -->
         <activity android:name=".activities.auth.RegisterActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+
+        <!-- dashboard -->
+        <activity android:name=".activities.home.MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
     </application>
