--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,16 @@
     package="com.project.siternak" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@drawable/siternak_logo_pic"
         android:label="@string/app_name"
         android:roundIcon="@drawable/siternak_logo_pic"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity android:name=".activities.auth.LoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
