--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.0.2'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
+
+//    implementation 'com.journeyapps:zxing-android-embedded:4.0.2'
 }
