--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,10 +37,13 @@
         <activity android:name=".activities.data.DataActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
-        <activity android:name=".activities.data.DataKematianActivity"
+        <activity android:name=".activities.data.KematianActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
-        <activity android:name=".activities.data.DataKematianDetailActivity"
+        <activity android:name=".activities.data.KematianDetailActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".activities.data.TambahKematianActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
 
