--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.2'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
 
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 //    implementation 'com.journeyapps:zxing-android-embedded:4.0.2'
 }
