--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,7 +102,19 @@
         <activity android:name=".activities.data.TernakEditActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
-
+        <!-- peternakan -->
+        <activity android:name=".activities.data.PeternakanActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".activities.data.PeternakanDetailActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".activities.data.PeternakanAddActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity android:name=".activities.data.PeternakanEditActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
 
         <!-- option -->
         <activity android:name=".activities.option.PemilikOptionActivity"
