--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden"/>
 
+        <!-- perkawinan -->
+        <activity android:name=".activities.perkawinan.MatchActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+
         <!-- data -->
         <activity android:name=".activities.data.DataActivity"
             android:screenOrientation="portrait"
