--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
 
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 
-//    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 //    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 
 }
