--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
 
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation 'com.google.zxing:core:3.4.0'
 //    implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
