--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.2'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
 
+    implementation 'com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
     implementation 'com.google.zxing:core:3.4.0'
-//    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 //    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
