--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
-    implementation 'de.hdodenhof:circleimageview:3.0.2'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
-
     implementation 'com.appeaser.sublimepickerlibrary:sublimepickerlibrary:2.1.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
     implementation 'com.google.zxing:core:3.4.0'
@@ -53,5 +51,5 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 //    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
-
+//    implementation 'de.hdodenhof:circleimageview:3.0.2'
 }
