--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
+        android:name=".activities.SiternakApp"
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@drawable/siternak_logo_pic"
